Adds additional declaration components (POJOs) and packages them separately from the deserializers.
Refs #113677